# artifacts/api-server/src/routes/index.ts
@@ -4,6 +4,7 @@ import storageRouter from "./storage";
 import authRouter from "./auth";
 import clientsRouter from "./clients";
 import quotationsRouter from "./quotations";
+import invoicesRouter from "./invoices";
 import settingsRouter from "./settings";
 import dashboardRouter from "./dashboard";
 import stripeRouter from "./stripe";
@@ -16,6 +17,7 @@ router.use(storageRouter);
 router.use(authRouter);
 router.use(clientsRouter);
 router.use(quotationsRouter);
+router.use(invoicesRouter);
 router.use(settingsRouter);
 router.use(dashboardRouter);
 router.use(stripeRouter);
