# lib/db/src/schema/index.ts
@@ -2,3 +2,4 @@ export * from "./users";
 export * from "./company-settings";
 export * from "./clients";
 export * from "./quotations";
+export * from "./invoices";
